kubernetes/deployment-microk8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: users-backend
    labels:
        app: users-backend
    namespace: example
spec:
    replicas: 1
    selector:
        matchLabels:
            app: users-backend
    template:
        metadata:
            labels:
                app: users-backend
        spec:
            containers:
                - name: users-backend-service
                  image: jonhurd/users-backend:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                     - containerPort: 8000
                - name: users-backend-db
                  image: jonhurd/users-db:latest
                  imagePullPolicy: IfNotPresent
